# FileTransfer

./: BUILD  CMakeLists.txt  LICENSE  README.md  conanfile.txt  config.yml  config2.yml
.github/workflows/: cmake.yml
src/: client.cpp  client.hpp  file_operations.cpp  file_operations.hpp  main_client.cpp  main_common.cpp  main_common.hpp  main_server.cpp  server.cpp  server.hpp
